--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vople_favi.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="온라인과 오프라인을 병행한 라이브 선거 플랫폼"
+    />
     <title>VOPLE</title>
   </head>
   <body>
